--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
 			<artifactId>mysql-connector-java</artifactId>
 			
 		</dependency>
+
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -55,6 +56,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<version>4.2.13.RELEASE</version>
 		</dependency>
 	</dependencies>
 
