--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/mixmix_db
 spring.datasource.username=springuser
 spring.datasource.password=mixmix
+spring.jpa.show-sql=true
+
+
+spring.jpa.properties.hibernate.formate_sql=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
